--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&display=swap');
+
 body {
-    background-color: rgba(39,16,78,.3);
+    background-color: rgba(221,172,245,.3);
+    font-family: 'Montserrat', sans-serif;
 }
 
 nav { 
     background-color: rgba(39,16,78,.4);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: larger;
+}
+
+
+.carousel {
+    width: 100%;
+    height: 500px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    animation: carouselAnimation 15s infinite;
+}
+
+
+
+
+/* Keyframes */
+
+@keyframes carouselAnimation {
+    0% {
+        background-image: url('../images/horseheader.jpg');
+    }
+    25% {
+        background-image: url('../images/headerkittens.jpg');
+        background-position-y: 30%;
+    }
+    50% {
+        background-image: url('../images/headerpuppy.jpg');
+        background-position-y: 20%;
+    }
+    75% {
+        background-image: url('../images/headersheep.jpg');
+    }
+    100% {
+        background-image: url('../images/horseheader.jpg'); /* Back to first image */
+    }
 }
