--- a/templates/index.html
+++ b/templates/index.html
@@ -13,12 +13,12 @@
     <header>
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar w/ text</a>
+            <a class="navbar-brand" href="#">Logo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <ul class="navbar-nav me-auto ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
@@ -29,12 +29,18 @@
                   <a class="nav-link" href="#">Pricing</a>
                 </li>
               </ul>
-              <span class="navbar-text">
-                Navbar text with an inline element
-              </span>
+              <ul class="navbar-nav">
+                <li>
+                  <a class="nav-link" href="#">Sign In</a>
+                </li>
+              </ul>
             </div>
           </div>
         </nav>
+        <div class="container-fluid carousel">
+
+        </div>
+
     </header>
     <!-- Font Awesome Script-->
     <script src="https://kit.fontawesome.com/187311079f.js" crossorigin="anonymous"></script>
